--- a/_episodes_rmd/14-intro-using-regression.Rmd
+++ b/_episodes_rmd/14-intro-using-regression.Rmd
@@ -1,9 +1,9 @@
 ---
-title: "Introduction to Linear Models"
+title: "Introduction to Matrix Algebra"
 teaching: 0
 exercises: 0
 questions:
-- "what is a linear model?"
+- "?"
 - "?"
 - "?"
 objectives:
@@ -24,7 +24,7 @@ source: Rmd
 
 ```{r, include=FALSE}
 source("../bin/chunk-options.R")
-knitr_fig_path("07-")
+knitr_fig_path("14-")
 ```
 
 # Matrix Algebra
@@ -221,3 +221,5 @@ and standard deviation
 ![](../fig/02-sigmasuby-sqrtoneminusrhosq.png) 
 
 Note that <i>&rho;</i> is the correlation between <i>&Upsilon;</i> and <i>X</i>, which implies that if we fix <i>X=x</i>, <i>&Upsilon;</i> does in fact follow a linear model. The <i>&beta;<sub>0</sub></i> and <i>&beta;<sub>1</sub></i> parameters in our simple linear model can be expressed in terms of <i>&mu;<sub>x</sub></i>, <i>&mu;<sub>y</sub></i>, <i>&sigma;<sub>x</sub></i>, <i>&sigma;<sub>y</sub></i>, and <i>&rho;</i>.
+
+ExercisesHere we include some refresher questions. If you haven’t done so already, install the library UsingR.install.packages("UsingR")Once you load it, you have access to Galton’s father and son heights:data("father.son",package="UsingR")1.What is the average height of the sons (don’t round off)?2.One of the defining features of regression is that we stratify one variable based on others.In Statistics, we use the verb “condition”. For example, the linear model for son and fatherheights answers the question: how tall do I expect a son to be if I condition on his fatherbeing x inches? The regression line answers this question for anyx.Using thefather.sondataset described above, we want to know the expected height ofsons, if we condition on the father being 71 inches. Create a list of son heights for sons thathave fathers with heights of 71 inches, rounding to the nearest inch.What is the mean of the son heights for fathers that have a height of 71 inches (don’t roundoff your answer)? Hint: use the functionroundon the fathers’ heights.3.We say a statistical model is a linear model when we can write it as a linear combinationof parameters and known covariates, plus random error terms. In the choices below, Y represents our observations, time t is our only covariate, unknown parameters arerepresented with lettersa; b; c; dand measurement error is represented by". Iftis known,then any transformation oftis also known. So, for example, bothY=a+bt+"andY=a+bf(t) +"are linear models. Which of the followingcannotbe written as a linearmodel?•A)Y=a+bt+"•B)Y=a+bcos(t) +"•C)Y=a+bt+"•D)Y=a+bt+ct2+dt3+"4.Suppose you model the relationship between weight and height across individuals with alinear model. You assume that the height of individuals for a fixed weight x follows a linearmodelY=a+bx+". Which of the following do you feel best describes what e represents?•A) Measurement error: scales are not perfect.•B) Within individual random fluctuations: you don’t weigh the same in the morningas in the afternoon.•C) Round off error introduced by the computer we use to analyze the data.•D) Between individual variability: people of the same height vary in their weight.
