Update and rename 10-matrix-algebra-examples.Rmd to 17-matrixAlg-examples.Rmd
rename and add exercises

--- a/_episodes_rmd/17-matrixAlg-examples.Rmd
+++ b/_episodes_rmd/17-matrixAlg-examples.Rmd
@@ -200,3 +200,5 @@ Note that we obtain the same values as above.
 #### Summary
 
 We have shown how to write linear models using linear algebra. We are going to do this for several examples, many of which are related to designed experiments. We also demonstrated how to obtain least squares estimates. Nevertheless, it is important to remember that because <i>y</i> is a random variable, these estimates are random as well. In a later section, we will learn how to compute standard error for these estimates and use this to perform inference.
+
+Exercises1.Suppose we are analyzing a set of 4 samples. The first two samples are from a treatmentgroup A and the second two samples are from a treatment group B. This design can berepresented with a model matrix like so:X<-matrix(c(1,1,1,1,0,0,1,1),nrow=4)rownames(X)<-c("a","a","b","b")X##   [,1] [,2]## a    1    0## a    1    0## b    1    1## b    1    1Suppose that the fitted parameters for a linear model give us:beta<-c(5,2)Use the matrix multiplication operator,%*%, in R to answer the following questions:What is the fitted value for the A samples? (The fitted Y values.)2.What is the fitted value for the B samples? (The fitted Y values.)3.Suppose now we are comparing two treatments B and C to a control group A, each withtwo samples. This design can be represented with a model matrix like so:X<-matrix(c(1,1,1,1,1,1,0,0,1,1,0,0,0,0,0,0,1,1),nrow=6)rownames(X)<-c("a","a","b","b","c","c")XSuppose that the fitted values for the linear model are given by:beta<-c(10,3,-3)What is the fitted value for the B samples?4.What is the fitted value for the C samples?
